# libdocument

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
ci/: install-packages.sh  setup-libdocument.sh  setup-prereq.sh  unit-tests.sh
include/json/: BitStream.h  Diff.h  Document.h  Iterator.h  Writer.h  defines.h  json.h  json_error.h
scripts/: clang-tidy.sh  setup-prereq.sh
src/: Document.cpp  DocumentMerger.h  DocumentPrettyPrinter.cpp  DocumentPrinter.cpp  DocumentTraversal.h  IterationEngine.cpp  Iterator.cpp  Iterator.h  Parser.cpp  Parser.h  PredicateChecker.cpp  PredicateChecker.h  Projection.cpp  Projection.h  Search.cpp  Search.h  Writer.cpp  defines.h  helper.h  json.cpp  json.h  meson.build
test/: Predicates.cpp  Search.cpp  Writer.cpp  basic.cpp  json.cpp  meson.build
